fix: bg color, mobile tic-tech section wrap

--- a/style/mobilestyles.css
+++ b/style/mobilestyles.css
@@ -1,7 +1,9 @@
-@media only screen and (max-width: 600px){
-#tictechtoelogo
-{
-    height:15vw;
-    width:75vw;
-}
+@media only screen and (max-width: 600px) {
+  #tictechtoelogo {
+    height: 15vw;
+    width: 75vw;
+  }
+  .img-wrap {
+    padding-top: 25vh;
+  }
 }
